--- a/src/index.css
+++ b/src/index.css
@@ -18,29 +18,75 @@ h1 {
   font-size: 36px;
 }
 
-/* home styles */
+/* header styles */
+header {
+  width: 100%;
+  padding: 20px;
+  background-color: #900c3f;
+}
+
+header nav {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav .logo {
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+}
+
+header nav .logo img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 3px;
+}
+
+header nav .btn-tab {
+  display: flex;
+  gap: 10px;
+}
+
+header nav .btn-tab .nav-btn {
+  border: 1px solid #efefef;
+  padding: 8px 16px;
+  border-radius: 3px;
+  font-size: 18px;
+}
+
+header nav .btn-tab .nav-btn:hover,
+header nav .btn-tab .nav-btn.active {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+/* homepage styles */
 .home-div {
   width: 100%;
   height: auto;
   background-image: url(./images/red-bamboo-bgImage.jpeg);
   background-attachment: fixed;
   background-size: cover;
+  background-position: center;
   padding: 30px;
 }
 
 .home-div .card-div {
   width: 60%;
   margin: 30px auto;
-  background-color: rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
+  box-shadow: 3px 3px 16px rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .home-div .card-div .cardImg-div {
-  width: 18.75rem;
-  height: 20.3rem;
+  width: 30%;
+  height: 30%;
   margin: 0 auto;
   mix-blend-mode: multiply;
 }
@@ -54,11 +100,11 @@ h1 {
   font-size: 1.5rem;
   text-transform: capitalize;
   text-align: center;
-  color: #dfdfdf;
   letter-spacing: 1.2px;
   margin-top: -10px;
   margin-bottom: 20px;
   padding: 10px;
+  color: #fff;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 }
@@ -77,4 +123,50 @@ h1 {
 .home-div .card-div .btn:hover {
   cursor: pointer;
   transform: scale(1.05);
+}
+
+/* menu styles */
+
+.menu {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 0 auto;
+  margin-top: 60px;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.9);
+  padding: 10px;
+}
+
+.menu .menu-item {
+  border: 1px solid #505050;
+  border-radius: 5px;
+  flex-basis: 49%;
+  flex-grow: 1;
+  display: flex;
+  padding: 20px;
+}
+
+.menu .menu-item .info-div {
+  flex-basis: 100%;
+}
+.menu .menu-item .info-div .name {
+  font-weight: 500;
+  font-size: 18px;
+}
+.menu .menu-item .info-div .desc {
+  font-size: 14px;
+}
+
+.menu .menu-item .img-div {
+  width: 150px;
+  height: 130px;
+  align-self: center;
+}
+
+.menu .menu-item .img-div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
 }
