--- a/src/index.css
+++ b/src/index.css
@@ -11,18 +11,18 @@ body {
 }
 
 h1 {
-  color: #900c3f;
+  color: #52071b;
   text-align: center;
   text-transform: capitalize;
   text-decoration: underline;
   font-size: 36px;
 }
 
-/* header styles */
+/*************** header styles ***************/
 header {
   width: 100%;
   padding: 20px;
-  background-color: #900c3f;
+  background-color: #52071b;
 }
 
 header nav {
@@ -64,7 +64,7 @@ header nav .btn-tab .nav-btn.active {
   cursor: pointer;
 }
 
-/* homepage styles */
+/***************** homepage styles ******************/
 .home-div {
   width: 100%;
   height: auto;
@@ -125,7 +125,7 @@ header nav .btn-tab .nav-btn.active {
   transform: scale(1.05);
 }
 
-/* menu styles */
+/*************** menu styles ****************/
 
 .menu {
   width: 80%;
@@ -169,4 +169,116 @@ header nav .btn-tab .nav-btn.active {
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
+}
+
+/***************** about page styles ***************/
+
+.about-page .section {
+  /* height: 500px; */
+}
+
+.about-page .section .text-div {
+  padding: 60px;
+  box-shadow: 0 0 12px 6px #52071b inset;
+}
+.about-page .section .text-div .p-head {
+  text-align: center;
+  font-size: 22px;
+  margin-bottom: 20px;
+  text-decoration: underline;
+  color: #52071b;
+}
+.about-page .section .text-div .p-text {
+  font-size: 20px;
+}
+
+.about-page .section .img-div {
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 250px;
+}
+
+.about-page .section:nth-child(1) .img-div {
+  background-image: url(./images/about-pg-img1.jpg);
+}
+
+.about-page .section:nth-child(2) .img-div {
+  background-image: url(./images/about-pg-img2.jpg);
+}
+
+/****************** contact page styles **************/
+
+.contact-page .section {
+  display: flex;
+  min-height: 450px;
+}
+
+.contact-page .section .img-box {
+  flex-basis: 50%;
+  background-position: center;
+  background-size: cover;
+}
+
+.contact-page .section:nth-child(1) .img-box {
+  background-image: url(./images/contact-pg-img1.jpg);
+}
+
+.contact-page .section .text-box {
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+.contact-page .section .text-box .pTitle {
+  color: #52071b;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-size: 18px;
+  margin: 30px 0;
+}
+
+.contact-page .section .text-box .contact-info {
+  margin-bottom: 30px;
+}
+
+.contact-page .section .text-box .contact-info p {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.contact-page .section .text-box .contact-info p span {
+  display: inline-block;
+  width: 12px;
+}
+
+.contact-page .section:nth-child(2) .img-box {
+  background-image: url(./images/contact-pg-img2.jpg);
+  background-position: bottom;
+}
+
+.contact-page .section .text-box .hours-info .day {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.contact-page .section .text-box .contact-social {
+  display: flex;
+  gap: 30px;
+}
+
+.contact-page .section .text-box .contact-social p {
+  display: inline-block;
+  width: 17px;
+}
+
+.contact-page .section .text-box .contact-social p:hover {
+  cursor: pointer;
+  fill: #52071b;
+  transform: scale(1.1);
 }
